@@ -4,3 +4,4 @@
 2015-02-07 - 1.3 - Fenix - changed plugin module structure
                          - do not let the plugin shutdown B3 when invalid parser is being used (just unload the plugin)
 2015-03-22 - 1.4 - Fenix - adapted plugin after committing first built-in release
+2015-07-05 - 1.5 - Fenix - make use of the new getSettings method to load configuration file values
